--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# package managers
+pnpm-lock.yaml
+package-lock.json
+yarn.lock
+
+
 # local env files
 .env*.local
 .env
