--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,15 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# package managers
+pnpm-lock.yaml
+package-lock.json
+yarn.lock
+
+
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
