--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
@@ -30,6 +31,7 @@
     "nookies": "^2.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.10.1",
