--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slider": "^1.1.2",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
     "animate.css": "^4.1.1",
-    "autoprefixer": "10.4.15",
-    "axios": "^1.5.0",
-    "classnames": "^2.3.2",
-    "dotenv": "^16.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "next": "13.5.6",
     "nookies": "^2.5.2",
-    "postcss": "8.4.30",
     "react": "18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.6.2",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
+    "dotenv": "^16.3.1",
+    "typescript": "5.2.2",
+    "tailwindcss": "3.3.3",
+    "postcss": "8.4.30",
+    "autoprefixer": "10.4.15"
   }
 }
