--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slider": "^1.1.2",
+    "@vercel/analytics": "^1.1.1",
     "animate.css": "^4.1.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
@@ -34,10 +35,10 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
-    "typescript": "5.2.2",
-    "tailwindcss": "3.3.3",
     "postcss": "8.4.30",
-    "autoprefixer": "10.4.15"
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
