--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "animate.css": "^4.1.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "lucide-react": "^0.288.0",
     "next": "13.5.6",
     "nookies": "^2.5.2",
     "react": "18.2.0",
