--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.10.1",
+    "react-resizable": "^3.0.5",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
   },
@@ -36,6 +37,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/react-resizable": "^3.0.6",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
     "postcss": "8.4.30",
