--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/node": "20.6.2",
+    "@types/nookies": "^2.0.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@types/react-resizable": "^3.0.6",
