--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.12.0",
     "react-resizable": "^3.0.5",
     "tailwind-merge": "^1.14.0",
+    "use-clipboard-copy": "^0.2.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
