--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.12.0",
     "react-resizable": "^3.0.5",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "use-clipboard-copy": "^0.2.0",
     "zod": "^3.22.2"
