--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
+NEXT_PUBLIC_API_URL="http://localhost:3333"
+NEXTAUTH_SECRET=""
+NEXTAUTH_URL=""
