--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slider": "^1.1.2",
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.0.10",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.10",
     "animate.css": "^4.1.1",
@@ -24,7 +26,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "lucide-react": "^0.288.0",
-    "next": "13.5.6",
+    "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-animation-on-scroll": "^5.1.0",
