--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "axios": "^1.6.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
-    "lucide-react": "^0.288.0",
+    "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "nookies": "^2.5.2",
@@ -36,6 +36,8 @@
     "react-icons": "^4.12.0",
     "react-resizable": "^3.0.5",
     "sharp": "^0.32.6",
+    "socket.io-client": "^4.7.5",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^1.14.0",
     "use-clipboard-copy": "^0.2.0",
     "zod": "^3.22.2"
