--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-auth": "^4.24.7",
     "nookies": "^2.5.2",
     "react": "18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
