--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
     "postcss": "8.4.30",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
