--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "framer-motion": "^11.2.4",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
