--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@radix-ui/colors": "3.0.0-rc.4",
-    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slider": "^1.1.2",
@@ -25,15 +25,15 @@
     "axios": "^1.6.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "framer-motion": "^11.2.4",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
-    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-animate-on-scroll": "^2.1.7",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.2",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.12.0",
     "react-resizable": "^3.0.5",
     "sharp": "^0.32.6",
@@ -41,7 +41,7 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^1.14.0",
     "use-clipboard-copy": "^0.2.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.6.2",
@@ -51,6 +51,8 @@
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
     "postcss": "8.4.30",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
