--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
 NEXT_PUBLIC_API_URL="http://localhost:3333"
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
