--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@types/react-resizable": "^3.0.6",
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "10.4.20",
     "dotenv": "^16.3.1",
-    "postcss": "8.4.30",
+    "postcss": "8.4.45",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "3.3.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "3.4.10",
     "typescript": "5.2.2"
   }
 }
