--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.3",
     "react-resizable": "^3.0.5",
     "sharp": "^0.32.6",
     "socket.io-client": "^4.7.5",
@@ -48,6 +49,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/react-modal": "^3.16.3",
     "@types/react-resizable": "^3.0.6",
     "autoprefixer": "10.4.20",
     "dotenv": "^16.3.1",
