--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.2",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.0.10",
     "@vercel/analytics": "^1.1.1",
@@ -37,6 +38,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.3",
+    "react-range": "^1.10.0",
     "react-resizable": "^3.0.5",
     "sharp": "^0.32.6",
     "socket.io-client": "^4.7.5",
